@@ -1,8 +1,6 @@
 package org.turkcell.ecommercepair5.service;
 
-import lombok.AllArgsConstructor;
 import org.springframework.context.annotation.Lazy;
-import org.springframework.security.web.header.writers.StaticHeadersWriter;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.turkcell.ecommercepair5.dto.subcategory.CreateSubcategoryDto;
@@ -10,8 +8,10 @@ import org.turkcell.ecommercepair5.dto.subcategory.DeleteSubcategoryDto;
 import org.turkcell.ecommercepair5.dto.subcategory.SubcategoryListingDto;
 import org.turkcell.ecommercepair5.entity.Category;
 import org.turkcell.ecommercepair5.entity.Subcategory;
-import org.turkcell.ecommercepair5.repository.CategoryRepository;
 import org.turkcell.ecommercepair5.repository.SubcategoryRepository;
+import org.turkcell.ecommercepair5.rules.CategoryBusinessRules;
+import org.turkcell.ecommercepair5.rules.ProductBusinessRules;
+import org.turkcell.ecommercepair5.rules.SubcategoryBusinessRules;
 
 import java.util.List;
 import java.util.Optional;
@@ -23,24 +23,42 @@ public class SubcategoryServiceImpl implements SubcategoryService {
 
     private final SubcategoryRepository subcategoryRepository;
 
-    private final ProductService productService;
-    private final CategoryService categoryService;
+    // private final ProductService productService;
+    // private final CategoryService categoryService;
+    private final SubcategoryBusinessRules subcategoryBusinessRules;
+    private final ProductBusinessRules productBusinessRules;
+    private final CategoryBusinessRules categoryBusinessRules;
 
-    public SubcategoryServiceImpl(SubcategoryRepository subcategoryRepository, @Lazy ProductService productService, @Lazy CategoryService categoryService){
+    public SubcategoryServiceImpl(SubcategoryRepository subcategoryRepository, @Lazy ProductService productService, @Lazy CategoryService categoryService, SubcategoryBusinessRules subcategoryBusinessRules, ProductBusinessRules productBusinessRules, CategoryBusinessRules categoryBusinessRules){
 
         this.subcategoryRepository = subcategoryRepository;
-        this.productService = productService;
-        this.categoryService = categoryService;
+        // this.productService = productService;
+        // this.categoryService = categoryService;
+        this.subcategoryBusinessRules = subcategoryBusinessRules;
+        this.productBusinessRules = productBusinessRules;
+        this.categoryBusinessRules = categoryBusinessRules;
     }
 
     @Override
-    public Optional<Subcategory> findById(Integer id)
-    {
+    public Optional<Subcategory> findById(Integer id) {
         return subcategoryRepository.findById(id);
     }
 
     @Override
+    public Optional<SubcategoryListingDto> findCategoryById(Integer id)
+    {
+        Subcategory subcategory = subcategoryBusinessRules.subcategoryMustExist(id);
+
+        SubcategoryListingDto subcategoryListingDto = new SubcategoryListingDto();
+        subcategoryListingDto.setId(subcategory.getId());
+        subcategoryListingDto.setName(subcategoryListingDto.getName());
+
+        return Optional.of(subcategoryListingDto);
+    }
+
+    @Override
     public void add(CreateSubcategoryDto createSubcategoryDto) {
+
         Optional<Subcategory> existingSubcategory = subcategoryRepository.findByName(createSubcategoryDto.getName());
 
         existingSubcategory.ifPresentOrElse(subcategory -> {
@@ -57,8 +75,7 @@ public class SubcategoryServiceImpl implements SubcategoryService {
             Subcategory subcategory = new Subcategory();
             subcategory.setName(createSubcategoryDto.getName());
             subcategory.setIsActive(true); // Varsayılan olarak aktif yap
-            Category category = categoryService.findById(createSubcategoryDto.getCategoryId())
-                    .orElseThrow(() -> new RuntimeException("Category not found!"));
+            Category category = categoryBusinessRules.categoryMustExist(createSubcategoryDto.getCategoryId());
             subcategory.setCategory(category);
 
             subcategoryRepository.save(subcategory);
@@ -67,31 +84,43 @@ public class SubcategoryServiceImpl implements SubcategoryService {
 
     @Transactional
     public void delete(DeleteSubcategoryDto deleteSubcategoryDto){
-
-        Subcategory subcategory = this
+        // id'ye göre kategori var mı iş kuralı
+        Subcategory subcategory = subcategoryBusinessRules.subcategoryMustExist(deleteSubcategoryDto.getId());
+        /*
+        *Subcategory subcategory = this
                 .findById(deleteSubcategoryDto.getId())
                 .orElseThrow(() -> new RuntimeException("There is no subcategory for this id."));
+        */
 
-        if(productService.hasProductsInCategory(deleteSubcategoryDto.getId()))
+        // ürün kontrolü iş kuralı
+        productBusinessRules.checkProductsExistInCategory(deleteSubcategoryDto.getId());
+
+        /*
+        *if(productService.hasProductsInCategory(deleteSubcategoryDto.getId()))
             throw new RuntimeException("Category cannot be deleted as it has associated products!");
-
+        */
         subcategory.setIsActive(false);
         subcategoryRepository.save(subcategory);
     }
 
+
     @Override
     public List<SubcategoryListingDto> getAll() {
-        List<SubcategoryListingDto> subcategoryListingDtos = subcategoryRepository
-                .findAll()
-                .stream()
-                .map(subcategory -> new SubcategoryListingDto(subcategory.getId(), subcategory.getName()))
-                .toList();
+        List<Subcategory> subcategories = subcategoryRepository.findByIsActiveEquals( true);
+
+        // Subcategory'leri DTO'ya dönüştür
+        List<SubcategoryListingDto> subcategoryListingDtos = subcategories.stream()
+                .map(subcategory -> new SubcategoryListingDto(
+                        subcategory.getId(),
+                        subcategory.getName()))
+                .collect(Collectors.toList());
+
         return subcategoryListingDtos;
     }
 
     @Override
     public List<SubcategoryListingDto> listingSubcategoriesByCategoryId(Integer categoryId) {
-        List<Subcategory> subcategories = subcategoryRepository.findByCategoryIdAndIsActive(categoryId, true);
+        List<Subcategory> subcategories = subcategoryRepository.findByCategoryIdAndIsActiveEquals(categoryId, true);
 
         // Subcategory'leri DTO'ya dönüştür
         List<SubcategoryListingDto> subcategoryListingDtos = subcategories.stream()
